gobmkida/c1/sgfNewNode
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/sgfNewNode/src/sgf/sgfnode.c:557:12: error: expected expression
*( _OWORD *)&result->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/sgfNewNode/src/sgf/sgfnode.c:557:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->props = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/sgfNewNode/src/sgf/sgfnode.c:558:12: error: expected expression
*( _OWORD *)&result->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/sgfNewNode/src/sgf/sgfnode.c:558:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->child = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/sgfNewNode/src/obj/4/sgfnode.o] Error 1
